# hf_bi_python_excercise

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
src/: etl.py  local_data_sink.py  url_data_source.py
tests/: conftest.py  test_etl.py
