[tool.poetry]
name = "hf-bi-python-excercise"
version = "0.1.0"
description = ""
authors = ["Olga Rabodzei <olga.rabodzei@klarna.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.0"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.1.1"
mypy = "^1.8.0"
flake8 = "^7.0.0"
pytest = "^8.0.0"
pandas-stubs = "^2.1.4.231227"
types-requests = "^2.31.0.20240125"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 79
multi_line_output = "VERTICAL_HANGING_INDENT"
src_paths = [
    "src",
    "tests",
]
force_grid_wrap = "0"
ensure_newline_before_comments = "True"
include_trailing_comma = "true"
length_sort = "true"
use_parentheses = "true"
force_single_line = "false"
skip_glob = [".venv", "venv"]
known_third_party = [
    "pandas",
    "requests"
]